# runnairs

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  review_patch.txt
services/control-plane/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
services/control-plane/alembic/: env.py
services/control-plane/alembic/versions/: 0001_initial_schema.py  0002_drop_audit_log_fks.py  0003_schedule_inputs_json.py  0004_automation_foundation.py  0005_instance_bootstrap.py  0006_built_in_iam_foundation.py  0007_oidc_integration.py  0008_git_skill_registry.py
services/control-plane/app/: cli.py  main.py  run_tokens.py  scheduler.py  seed.py  worker.py
services/control-plane/app/api/: admin.py  approvals.py  auth.py  bootstrap.py  catalog.py  connections.py  dev.py  feedback.py  installations.py  me.py  oidc.py  runs.py  schedules.py  secrets.py  skill_registry.py
services/control-plane/app/core/: config.py  db.py  dependencies.py  security.py
services/control-plane/app/execution/: __init__.py  backend.py  docker_backend.py  job_queue.py
services/control-plane/app/models/: __init__.py  agent.py  audit_log.py  base.py  connection.py  feedback.py  installation.py  instance_setting.py  oidc_auth_request.py  oidc_provider.py  run.py  schedule.py  secret.py  skill_source.py  tenant.py  user.py  user_identity.py
services/control-plane/app/schemas/: admin_users.py  auth.py  bootstrap.py  oidc.py  runs.py  secrets.py  skill_registry.py
services/control-plane/app/services/: agent_deploy_service.py  auth_service.py  bootstrap_service.py  installations_service.py  oidc_login_service.py  oidc_provider_service.py  package_descriptor.py  (+7 more)
services/mock-crm/: pyproject.toml
services/mock-crm/app/: main.py
services/tool-gateway/: Dockerfile  pyproject.toml
services/tool-gateway/app/: approvals.py  audit.py  auth.py  config.py  db.py  main.py  policy.py  secret_store.py  secrets.py
(+130 files in other folders)
